# moonlight-web-stream

./: .gitignore  BUILDING_WINDOWS.md  Cargo.toml  QUICK_VERIFICATION_GUIDE.md  TESTER_GUIDE.md  VERIFICATION_COMPLETE.md  VERIFICATION_REPORT.md  VERIFICATION_RESULTS.md  WEBTRANSPORT_ANDROID_WEBVIEW_CLARIFICATION.md  WEBTRANSPORT_API_VERIFICATION.md  WEBTRANSPORT_API_VERIFIED.md  WEBTRANSPORT_CLIENT_INTEGRATION.md  WEBTRANSPORT_FEASIBILITY_ANALYSIS.md  WEBTRANSPORT_IMPLEMENTATION_PLAN.md  build-release.ps1  build-webserver.bat  verify_webtransport_api.ps1
moonlight-web/web-server/: Cargo.toml  package-lock.json
moonlight-web/web-server/src/: main.rs  remote_access.rs  stun.rs  upnp.rs
moonlight-web/web-server/src/api/: auth.rs  input.rs  mod.rs  network.rs  stream.rs
moonlight-web/web-server/src/app/: fuji.rs  fuji_internal.rs  host.rs  mod.rs  session.rs  streamer_manager.rs
moonlight-web/web-server/static/web/: admin.js  stream.html  stream.js  styles.css
moonlight-web/web-server/static/web/component/host/: index.js
moonlight-web/web-server/static/web/stream/: index.js  input.js  video.js
moonlight-web/web-server/web/: index.ts  stream.ts  styles.css
moonlight-web/web-server/web/component/host/: index.ts
moonlight-web/web-server/web/component/modal/: qr_auth.ts
moonlight-web/web-server/web/stream/: index.ts  input.ts  stats.ts
moonlight-web/web-server/web/stream/audio/: audio_element.ts
moonlight-web/web-server/web/stream/transport/: index.ts  web_socket.ts  webrtc.ts  webtransport.ts
moonlight-web/web-server/web/stream/video/: video_element.ts
(+24 files in other folders)
